--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,9 +2,9 @@ name: moceansdk
 version: 1.0.0
 authors:
   - Micro Ocean Technologies Sdn Bhd <support@moceanapi.com>
-homepage: http://moceanapi.com
+homepage: https://moceanapi.com
 repository: https://github.com/MoceanAPI/mocean-sdk-dart
-description: Dart client for MoceanAPI
+description: SDK Library Dart to send SMS for FREE using MoceanAPI sms solution.
 
 environment:
   sdk: '>=2.4.0 <3.0.0'
