--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
         run: dart pub get
       
       - name: build test
-        run: dart pub run --no-sound-null-safety test
+        run: dart test
 
       - name: codecov test
         uses: codecov/codecov-action@v1
