--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,9 @@ jobs:
       - name: install dependencies
         run: dart pub get
       
+      - name: run test coverage
+        run: test_coverage
+        
       - name: build test
         run: dart --no-sound-null-safety test
 
