--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,9 @@ jobs:
 
       - name: install dependencies
         run: dart pub get
+      
+      - name: run test coverage
+        run: nohup pub run test_coverage &
 
       - name: build test
         run: dart --no-sound-null-safety test --platform vm
